*SVN*

* Force *_url named routes to show the host in ActionView [Rick]

  <%= url_for ... %> # no host
  <%= foo_path %>    # no host
  <%= foo_url %>     # host!

* Add support for converting blocks into function arguments to JavaScriptGenerator#call and JavaScriptProxy#call. [Sam Stephenson]

* Add JavaScriptGenerator#literal for wrapping a string in an object whose #to_json is the string itself. [Sam Stephenson]

* Add <%= escape_once html %> to escape html while leaving any currently escaped entities alone.  Fix button_to double-escaping issue. [Rick]

* Fix double-escaped entities, such as &amp;amp;, &amp;#123;, etc. [Rick]

* Fix deprecation warnings when rendering the template error template. [Nicholas Seckar]

* Fix routing to correctly determine when generation fails. Closes #6300. [psross].

* Fix broken assert_generates when extra keys are being checked. [Jamis Buck]

* Replace KCODE checks with String#chars for truncate.  Closes #6385 [Manfred Stienstra]

* Make page caching respect the format of the resource that is being requested even if the current route is the default route so that, e.g. posts.rss is not transformed by url_for to '/' and subsequently cached as '/index.html' when it should be cached as '/posts.rss'.  [Marcel Molina Jr.]

* Use String#chars in TextHelper::excerpt. Closes #6386 [Manfred Stienstra]

* Install named routes into ActionView::Base instead of proxying them to the view via helper_method. Closes #5932. [Nicholas Seckar]

* Update to latest Prototype and script.aculo.us trunk versions [Thomas Fuchs]

* Fix relative URL root matching problems. [Mark Imbriaco]

* Fix filter skipping in controller subclasses.  #5949, #6297, #6299 [Martin Emde]

* render_text may optionally append to the response body. render_javascript appends by default. This allows you to chain multiple render :update calls by setting @performed_render = false between them (awaiting a better public API).  [Jeremy Kemper]
