@@ -159,11 +159,13 @@ module ActionView
       private
         def compute_public_path(source, dir, ext)
           source = source.dup
-          source  = "/#{dir}/#{source}" unless source.first == "/" || source.include?(":")
-          source << ".#{ext}" unless source.split("/").last.include?(".")
-          source << '?' + rails_asset_id(source) if defined?(RAILS_ROOT) && %r{^[-a-z]+://} !~ source
-          source  = "#{@controller.request.relative_url_root}#{source}" unless %r{^[-a-z]+://} =~ source
-          source = ActionController::Base.asset_host + source unless source.include?(":")
+          source << ".#{ext}" if File.extname(source).blank?
+          unless source =~ %r{^[-a-z]+://}
+            source = "/#{dir}/#{source}" unless source[0] == ?/
+            asset_id = rails_asset_id(source)
+            source << '?' + asset_id if defined?(RAILS_ROOT) and not asset_id.blank?
+            source = "#{ActionController::Base.asset_host}#{@controller.request.relative_url_root}#{source}"
+          end
           source
         end
         
